--- a/CSS-My Site/css/styles.css
+++ b/CSS-My Site/css/styles.css
@@ -6,6 +6,18 @@ h1 {
   margin-top: 0;
 }
 
-div {
+.top_container {
   background-color: #E4F9F5;
+}
+
+.middle_container {
+  background-color: red;
+  height: 200px;
+  width: 200px;
+}
+
+.bottom_container {
+  background-color: blue;
+  height: 200px;
+  width: 200px;
 }
