--- a/CSS-My Site/css/styles.css
+++ b/CSS-My Site/css/styles.css
@@ -1,13 +1,19 @@
 body {
   margin: 0;
+  text-align: center;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 h1 {
   margin-top: 0;
+
 }
 
 .top_container {
   background-color: #E4F9F5;
+  position: relative;
+  padding-top: 100px;
+
 }
 
 .middle_container {
@@ -24,4 +30,18 @@ h1 {
 
 .pro {
   text-decoration: underline;
+}
+
+.top-cloud {
+  position: absolute;
+  right: 300px;
+  top: 50px;
+
+}
+
+.bottom-cloud {
+  position: absolute;
+  left: 300px;
+  bottom: 300px;
+
 }
