--- a/CSS-My Site/css/styles.css
+++ b/CSS-My Site/css/styles.css
@@ -1,31 +1,43 @@
 body {
   margin: 0;
   text-align: center;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Merriweather', serif;
 }
 
 h1 {
   margin-top: 0;
+  font-family: 'Sacramento', cursive;
+}
 
+h2 {
+  font-family: 'Montserrat', sans-serif;
+}
+
+h3 {
+  font-family: 'Montserrat', sans-serif;
+}
+
+.profile-photo {
+  border-radius: 50%;
+  padding-top: 10px;
+}
+
+.skill-2 {
+  border-radius: 50%;
 }
 
 .top_container {
   background-color: #E4F9F5;
   position: relative;
   padding-top: 100px;
-
 }
 
 .middle_container {
-  background-color: red;
-  height: 200px;
-  width: 200px;
+
 }
 
 .bottom_container {
-  background-color: blue;
-  height: 200px;
-  width: 200px;
+
 }
 
 .pro {
@@ -36,12 +48,10 @@ h1 {
   position: absolute;
   right: 300px;
   top: 50px;
-
 }
 
 .bottom-cloud {
   position: absolute;
   left: 300px;
   bottom: 300px;
-
 }
