--- a/CSS-My Site/css/styles.css
+++ b/CSS-My Site/css/styles.css
@@ -5,12 +5,14 @@ body {
 }
 
 h1 {
-  margin-top: 0;
+  font-size: 5.625rem;    /* 16px = 100% = 1em. using rem is better than any other. */
+  margin: 50px auto 0 auto;
   font-family: 'Sacramento', cursive;
 }
 
 h2 {
   font-family: 'Montserrat', sans-serif;
+  font-size: 2.5rem;
 }
 
 h3 {
@@ -54,4 +56,9 @@ h3 {
   position: absolute;
   left: 300px;
   bottom: 300px;
+}
+
+.footer-link:hover {
+  font-size: 1.3rem;
+  background-color: aqua;
 }
