--- a/CSS-My Site/css/styles.css
+++ b/CSS-My Site/css/styles.css
@@ -8,15 +8,18 @@ h1 {
   font-size: 5.625rem;    /* 16px = 100% = 1em. using rem is better than any other. */
   margin: 50px auto 0 auto;
   font-family: 'Sacramento', cursive;
+  color: #66BFBF;
 }
 
 h2 {
   font-family: 'Montserrat', sans-serif;
   font-size: 2.5rem;
+  color: #66BFBF;
 }
 
 h3 {
   font-family: 'Montserrat', sans-serif;
+  color: #11999E;
 }
 
 .profile-photo {
@@ -58,7 +61,6 @@ h3 {
   bottom: 300px;
 }
 
-.footer-link:hover {
-  font-size: 1.3rem;
-  background-color: aqua;
+.footer-link {
+  color: #11999E;
 }
