--- a/CSS-My Site/css/styles.css
+++ b/CSS-My Site/css/styles.css
@@ -5,7 +5,8 @@ body {
 }
 
 h1 {
-  font-size: 5.625rem;    /* 16px = 100% = 1em. using rem is better than any other. */
+  font-size: 5.625rem;
+  /* 16px = 100% = 1em. using rem is better than any other. */
   margin: 50px auto 0 auto;
   font-family: 'Sacramento', cursive;
   color: #66BFBF;
@@ -15,6 +16,7 @@ h2 {
   font-family: 'Montserrat', sans-serif;
   font-size: 2.5rem;
   color: #66BFBF;
+  font-weight: normal;
 }
 
 h3 {
@@ -23,12 +25,21 @@ h3 {
 }
 
 .profile-photo {
+  width: 15%;
   border-radius: 50%;
   padding-top: 10px;
 }
 
+.skill-1 {
+  width: 15%;
+  float: left;
+  margin-right: 30px;
+}
+
 .skill-2 {
-  border-radius: 50%;
+  width: 15%;
+  float: right;
+  margin-left: 30px;
 }
 
 .top_container {
@@ -37,12 +48,15 @@ h3 {
   padding-top: 100px;
 }
 
-.middle_container {
+.middle_container {}
 
-}
+.bottom_container {}
 
-.bottom_container {
-
+.skill-row {
+  width: 60%;
+  margin: 100px auto 100px auto;
+  text-align: left;
+  line-height: 2;
 }
 
 .pro {
