--- a/CSS-My Site/css/styles.css
+++ b/CSS-My Site/css/styles.css
@@ -4,12 +4,15 @@ body {
   font-family: 'Merriweather', serif;
 }
 
+div {}
+
 h1 {
   font-size: 5.625rem;
   /* 16px = 100% = 1em. using rem is better than any other. */
   margin: 50px auto 0 auto;
   font-family: 'Sacramento', cursive;
   color: #66BFBF;
+  padding-top: 10px;
 }
 
 h2 {
@@ -24,10 +27,22 @@ h3 {
   color: #11999E;
 }
 
+hr {
+  color: #EAF6F6;
+  border-width: 10px;
+  width: 5%;
+  border-style: none none dotted none;
+}
+
 .profile-photo {
   width: 15%;
   border-radius: 50%;
   padding-top: 10px;
+}
+
+.profile {
+  padding-top: 75px;
+  padding-bottom: 75px;
 }
 
 .skill-1 {
@@ -42,23 +57,30 @@ h3 {
   margin-left: 30px;
 }
 
-
-
 .top_container {
   background-color: #E4F9F5;
   position: relative;
-  padding-top: 100px;
+  padding-top: 75px;
 }
 
-.middle_container {}
+.middle-container {}
 
-.bottom_container {}
+.bottom-container {
+  background-color: #66BFBF;
+  padding-top: 75px;
+  padding-bottom: 50px;
+}
 
 .skill-row {
   width: 60%;
   margin: 100px auto 100px auto;
   text-align: left;
   line-height: 2;
+}
+
+.skills {
+  padding-top: 75px;
+  padding-bottom: 75px;
 }
 
 .pro {
@@ -77,6 +99,37 @@ h3 {
   bottom: 300px;
 }
 
+.contact-me {
+  padding-top: 75px;
+  padding-bottom: 75px;
+}
+
+.button {
+  padding: 15px 10px 15px 10px;
+  background-color: #11999E;
+  color: white;
+  border: 0;
+  line-height: 0.5;
+  font-size: 1rem;
+  text-align: center;
+  margin: 50px 0 50px 0;
+  border-radius: 10px;
+}
+
+.button:hover {
+  background-color: #66BFBF;
+}
+
+
+
 .footer-link {
   color: #11999E;
+  padding-right: 30px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.copyright {
+  color: #EAF6F6;
+  padding-top: 40px;
 }
