--- a/CSS-My Site/css/styles.css
+++ b/CSS-My Site/css/styles.css
@@ -1,4 +1,5 @@
 body {
+  color: #40514E;
   margin: 0;
   text-align: center;
   font-family: 'Merriweather', serif;
@@ -34,6 +35,10 @@ hr {
   border-style: none none dotted none;
 }
 
+p{
+  line-height: 2;
+}
+
 .profile-photo {
   width: 15%;
   border-radius: 50%;
@@ -43,6 +48,11 @@ hr {
 .profile {
   padding-top: 75px;
   padding-bottom: 75px;
+}
+
+.intro{
+  width: 30%;
+  margin: auto;
 }
 
 .skill-1 {
@@ -75,7 +85,7 @@ hr {
   width: 60%;
   margin: 100px auto 100px auto;
   text-align: left;
-  line-height: 2;
+
 }
 
 .skills {
@@ -95,7 +105,7 @@ hr {
 
 .bottom-cloud {
   position: absolute;
-  left: 300px;
+  left: 250px;
   bottom: 300px;
 }
 
